fix(gui): Bottom scrollbar on instance page

--- a/gui/src/pages/instance/InstanceInfo.css
+++ b/gui/src/pages/instance/InstanceInfo.css
@@ -82,7 +82,7 @@
 }
 
 #instance-banner {
-	width: 100vw;
+	width: 100%;
 	filter: saturate(150%);
 }
 
